--- a/src/modules/accounts/views/emails/forgotPassword.hbs
+++ b/src/modules/accounts/views/emails/forgotPassword.hbs
@@ -1,33 +1,38 @@
-<style>
-  .container {
-    width: 800px;
-    font-family: Arial, Helvetica, sans-serif;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-  }
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      .container {
+        width: 800px;
+        font-family: Arial, Helvetica, sans-serif;
+      }
 
-  span {
-    margin: 10px;
-  }
-</style>
+      span {
+        margin: 10px 0;
+        display: block;
+      }
+    </style>
+  </head>
 
-<div class="container">
-  <img src="https://i.imgur.com/oUAKMC5.png">
-  <span>Oi, {{name}}</span>
+  <body>
+    <div class="container">
+      <img src="https://i.imgur.com/oUAKMC5.png">
+      <span>Oi, {{name}}</span>
 
-  <br/>
+      <br/>
 
-  <span>Você solicitou alteração de senha.</span>
-  <span>
-    Para realizar a troca, clique no link <a href={{link}}>{{link}}</a>
-  </span>
+      <span>Você solicitou alteração de senha.</span>
+      <span>
+        Para realizar a troca, clique no link <a href={{link}}>{{link}}</a>
+      </span>
 
-  <span>
-    Caso não tenha sido você que solicitou a alteração de senha, basta ignorar esse e-mail.
-  </span>
+      <span>
+        Caso não tenha sido você que solicitou a alteração de senha, basta ignorar esse e-mail.
+      </span>
 
-  <strong>Obrigado!</strong>
+      <strong>Obrigado!</strong>
 
-  <h3>Equipe | <strong>Rentx</strong></h3>
-</div>
+      <h3>Equipe | <strong>Rentx</strong></h3>
+    </div>
+  </body>
+</html>
